@@ -1,3 +1,10 @@
+2010-02-17  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/tkMenu.c: Defer TkMenuOptionTables cleanup
+	to CallWhenDeleted() time, to ensure that the record
+	doesn't get freed until after all widget instance commands
+	have been deleted (Fixes [Bug#2952745]).
+
 2010-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* library/bgerror.tcl: [TIP #359]: Extended Window Manager Hints
